--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,142 @@
-# Add your project dependencies here
-numpy
-pandas
-scikit-learn
+aiobotocore==2.14.0
+aiohttp==3.9.5
+aioitertools==0.12.0
+aiosignal==1.3.1
+altair==5.4.1
+appnope==0.1.4
+arrow==1.3.0
+asttokens==2.4.1
+attrs==23.2.0
+binaryornot==0.4.4
+blinker==1.8.2
+botocore==1.35.7
+cachetools==5.5.0
+certifi==2024.6.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+contourpy==1.3.0
+cookiecutter==2.6.0
+cycler==0.12.1
+datasets==2.20.0
+debugpy==1.8.2
+decorator==5.1.1
+dill==0.3.8
+executing==2.0.1
+faiss-cpu==1.8.0.post1
+filelock==3.15.4
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2023.12.2
+gcsfs==2023.12.2.post1
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.19.2
+google-auth==2.34.0
+google-auth-oauthlib==1.2.1
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+grpcio==1.66.1
+huggingface-hub==0.23.4
+idna==3.7
+ipykernel==6.29.5
+ipython==8.26.0
+ipywidgets==8.1.3
+jedi==0.19.1
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.11
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+narwhals==1.6.3
+nest-asyncio==1.6.0
+networkx==3.3
+numpy==1.26.4
+oauthlib==3.2.2
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+pinecone==5.1.0
+pinecone-client==3.2.2
+pinecone-datasets==0.7.0
+pinecone-plugin-inference==1.0.3
+pinecone-plugin-interface==0.0.7
+platformdirs==4.2.2
+polars==1.1.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==3.20.3
+protoc-gen-openapiv2==0.0.1
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==1.10.18
+pydeck==0.9.1
+Pygments==2.18.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-slugify==8.0.4
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.20.0
+rsa==4.9
+s3fs==2023.12.2
+safetensors==0.4.4
+scikit-learn==1.5.0
+scipy==1.14.0
+seaborn==0.13.2
+sentence-transformers==3.0.1
+six==1.16.0
+smmap==5.0.1
+stack-data==0.6.3
+streamlit==1.38.0
+sympy==1.13.2
+tenacity==8.5.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toml==0.10.2
+torch==2.4.0
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.44.2
+txtai==7.3.0
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wcwidth==0.2.13
+widgetsnbextension==4.0.11
+wrapt==1.16.0
+xxhash==3.4.1
+yarl==1.9.4
